# fastapi-boilerplate

./: .env  README.md  alembic.ini  compose.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
alembic/: env.py
docker/python/: Dockerfile
ms_boilerplate/: __init__.py  exception_handlers.py  main.py
ms_boilerplate/config/: db.py
